check edit inputs fix

--- a/clients/edit_client.html
+++ b/clients/edit_client.html
@@ -17,7 +17,7 @@
           <label>Nombre:</label>
         </div>
         <div class="form-input">
-          <input type="text" name="Name" id="name" placeholder="Nombre" onkeypress="return CheckInput(event)" required="">
+          <input type="text" name="Name" id="name" placeholder="Nombre" onkeypress="return  CheckInput(event, 'text')" required="">
         </div>
       </div>
       <div class="form-row">
@@ -25,7 +25,7 @@
           <label>DNI:</label>
         </div>
         <div class="form-input">
-          <input type="number" name="DNI" id="dni" placeholder="DNI" onkeypress="return CheckInput(event, 'number')" required="">     
+          <input type="number" name="DNI" id="dni" placeholder="DNI" onkeypress="return  CheckInput(event, 'number')" required="">     
         </div>
       </div>
       <div class="form-row">
